@@ -19,6 +19,8 @@ cupt (2.2.0~) UNRELEASED; urgency=low
         all front-end checks).
       - Unpack/configure actions of some important packages were not optimally
         merged before when there are reverse-[Pre-]Depends.
+      - Prefer temporary breaking reverse-Depends than anything else.
+        (Closes: #637233)
     - config:
       - New option 'cupt::cache::release-file-expiration::ignore'.
       - Use APT option 'acquire::http::allowredirect' instead of Cupt-specific
